tests/NormalTests/paczka1/fuzzy1/51091291.err
Error in line 2: mCE756e6T A474 24,1
Error in line 8: 7NIBuNjOwGW A975 40,8
Error in line 31: F0[Q3 A975 231,8
Error in line 35: A975 S502 88,1
